chore: fix SonarQube warnings and reformat code